start simplification, done first vers differentiation

--- a/graphDumpDiff.html
+++ b/graphDumpDiff.html
@@ -7,7 +7,7 @@ body { background-color: #a8cfc3ff }
 </head>
 <body>
 
-<h3 align="center"> TreeDump called from main.cpp:51 from func main</h3>
+<h3 align="center"> TreeDump called from main.cpp:60 from func main</h3>
 <pre>
 DUMP NUMBER 1
 -----------------------------------TreeDump------------------------
@@ -37,7 +37,7 @@ body { background-color: #a8cfc3ff }
 </head>
 <body>
 
-<h3 align="center"> TreeDump called from main.cpp:107 from func main</h3>
+<h3 align="center"> TreeDump called from main.cpp:116 from func main</h3>
 <pre>
 DUMP NUMBER 2
 -----------------------------------TreeDump------------------------
@@ -54,6 +54,726 @@ variables:
 	4 ('b') = -666.000000
 IMAGE
 <img src="./images/logFile_2.png" width="1000" alt="DUMP 2"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 3
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 2</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_3.png" width="1000" alt="DUMP 3"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 4
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 3</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_4.png" width="1000" alt="DUMP 4"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:254 from func creatOperatorNode</h3>
+<pre>
+DUMP NUMBER 5
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 4</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_5.png" width="1000" alt="DUMP 5"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 6
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 5</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_6.png" width="1000" alt="DUMP 6"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 7
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 6</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_7.png" width="1000" alt="DUMP 7"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 8
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 7</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_8.png" width="1000" alt="DUMP 8"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 9
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 8</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_9.png" width="1000" alt="DUMP 9"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:254 from func creatOperatorNode</h3>
+<pre>
+DUMP NUMBER 10
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 9</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_10.png" width="1000" alt="DUMP 10"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 11
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 10</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_11.png" width="1000" alt="DUMP 11"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 12
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 11</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_12.png" width="1000" alt="DUMP 12"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:186 from func copySubtree</h3>
+<pre>
+DUMP NUMBER 13
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 12</p>
+tree [0x608000000120]:
+size = 8
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_13.png" width="1000" alt="DUMP 13"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 14
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 13</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_14.png" width="1000" alt="DUMP 14"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 15
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 14</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_15.png" width="1000" alt="DUMP 15"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:254 from func creatOperatorNode</h3>
+<pre>
+DUMP NUMBER 16
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 15</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_16.png" width="1000" alt="DUMP 16"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 17
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 16</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_17.png" width="1000" alt="DUMP 17"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:254 from func creatOperatorNode</h3>
+<pre>
+DUMP NUMBER 18
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 17</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_18.png" width="1000" alt="DUMP 18"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:254 from func creatOperatorNode</h3>
+<pre>
+DUMP NUMBER 19
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 18</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_19.png" width="1000" alt="DUMP 19"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from differentiator.cpp:166 from func getDiffNode</h3>
+<pre>
+DUMP NUMBER 20
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 19</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_20.png" width="1000" alt="DUMP 20"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from main.cpp:121 from func main</h3>
+<pre>
+DUMP NUMBER 21
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 3</p>
+tree [0x6080000001a0]:
+size = 1
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_21.png" width="1000" alt="DUMP 21"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from simplificationMathTree.cpp:90 from func convoliteTwoConst</h3>
+<pre>
+DUMP NUMBER 22
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 20</p>
+tree [0x6080000001a0]:
+size = 18446744073709551614
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_22.png" width="1000" alt="DUMP 22"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from simplificationMathTree.cpp:95 from func convoliteTwoConst</h3>
+<pre>
+DUMP NUMBER 23
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 21</p>
+tree [0x6080000001a0]:
+size = 18446744073709551614
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_23.png" width="1000" alt="DUMP 23"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from simplificationMathTree.cpp:90 from func convoliteTwoConst</h3>
+<pre>
+DUMP NUMBER 24
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 22</p>
+tree [0x6080000001a0]:
+size = 18446744073709551611
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_24.png" width="1000" alt="DUMP 24"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from simplificationMathTree.cpp:95 from func convoliteTwoConst</h3>
+<pre>
+DUMP NUMBER 25
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 23</p>
+tree [0x6080000001a0]:
+size = 18446744073709551611
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_25.png" width="1000" alt="DUMP 25"/>
+
+-----------------------------------END-TreeDump------------------------
+
+</pre>
+<!DOCTYPE html>
+<html lang = 'ru'>
+<head>
+<style>
+body { background-color: #a8cfc3ff }
+</style>
+</head>
+<body>
+
+<h3 align="center"> TreeDump called from main.cpp:127 from func main</h3>
+<pre>
+DUMP NUMBER 26
+-----------------------------------TreeDump------------------------
+
+<p style="color: #0e450cff;"> DIFF TREE DUMP 4</p>
+tree [0x6080000001a0]:
+size = 18446744073709551611
+variables:
+{
+	0 ('x') = -666.000000
+	1 ('y') = -666.000000
+	2 ('z') = -666.000000
+	3 ('a') = -666.000000
+	4 ('b') = -666.000000
+IMAGE
+<img src="./images/logFile_26.png" width="1000" alt="DUMP 26"/>
 
 -----------------------------------END-TreeDump------------------------
 
